Fix footer and main alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
 }
 
 header {
-    /* width: 100vw; */
+    background-color: whitesmoke;
 }
 
 main {
